snowflake-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: snowflakes-pod
  labels:
    app: snowflake-app
spec:
  containers:
    - image: snowflakes:1.1
      name: snowflake-app
      livenessProbe:
        httpGet:
          path: /management/health/liveness
          port: 8080
        initialDelaySeconds: 15
        timeoutSeconds: 2
        periodSeconds: 20
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /management/health/readiness
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 5
        failureThreshold: 3
        successThreshold: 1
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
