snoflake-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: snowflake-service
spec:
  type: ClusterIP
  selector:
    app: snowflake-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
