snowflake-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard-ingress
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: snowflake.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: # определяет, куда перенаправлять трафик
          service:
            name: snowflake-service # имя сервиса, на который уходит запрос
            port:
              number: 80 # порт сервиса, на который направляется трафик
